# linuxhub

./: .srcinfo  PKGBUILD  linuxhub.desktop  linuxhub.service  package.json  pnpm-lock.yaml
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  locale.rs  model.rs  printers.rs  reboot.rs
src/components/: InstallQueue.tsx  ProfileModal.tsx  SettingsModal.tsx  TitleBar.tsx  icons.tsx
src/components/configuration/: AddLocaleModal.tsx  AddPrinterModal.tsx  KernelChangelogModal.tsx
src/data/: config.ts  translations.ts
src/docs/: distro-involved.md  distro-readme.md  distro-release-info.md
src/store/: hooks.ts
src/views/: About.tsx  Configuration.tsx  Documentation.tsx  Home.tsx  Landing.tsx  Packages.tsx
src/views/configuration/: DevicesPanel.tsx  HomePanel.tsx  KernelPanel.tsx  LocalePanel.tsx  NetworkPanel.tsx  ProcessesPanel.tsx  SensorsPanel.tsx  UsersPanel.tsx
