[package]
name = "linuxhub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "linuxhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-shell = "2.3.4"
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.4.5"
whoami = "1.6.1"
home = "0.5.12"
base64 = "0.22.1"
sysinfo = { version = "0.37.2", features = ["serde"] } # The main system information library
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
bluer = { version = "0.17.4", features = ["full", "serde"] }
anyhow = "1.0.100"
printers = "2.2.1"  # For listing/basic info
